--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+.env
 .env*.local
+
+# package-lock
+package-lock.json
 
 # vercel
 .vercel
