--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@next/font": "13.1.6",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
     "cloudinary": "^1.34.0",
+    "cookies-next": "^2.1.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "js-sha256": "^0.9.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
     "react": "18.2.0",
