--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
-    "sweetalert2": "^11.7.3",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "sweetalert2": "^11.4.8",
     "typescript": "4.9.5"
   }
 }
