--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.4.8",
+    "timeago.js": "^4.0.2",
     "typescript": "4.9.5"
   }
 }
